fix bento grid on mobile

--- a/styles.css
+++ b/styles.css
@@ -666,6 +666,7 @@ footer {
     padding: 1rem 1rem 1.5rem;
     margin: 0 -2.5rem;
     scrollbar-width: none;
+    padding-left: 2.6rem;
     -ms-overflow-style: none;
   }
 
